--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Карновал</title>   
+    <title>Todo на React , Redux</title>   
   	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
